--- a/package.json
+++ b/package.json
@@ -1,45 +1,66 @@
 {
-  "name": "micro-fabric",
-  "description": "µFabric Application Framework",
-  "version": "0.0.1",
-  "private": false,
-  "main": "micro-fabric",
+  "_from": "git+ssh://git@github.com/aspectron/micro-fabric.git",
+  "_id": "micro-fabric@0.0.1",
+  "_inBundle": false,
+  "_location": "/micro-fabric",
+  "_phantomChildren": {
+    "nuid": "0.6.14"
+  },
+  "_requested": {
+    "type": "git",
+    "raw": "micro-fabric@git+ssh://git@github.com/aspectron/micro-fabric.git",
+    "name": "micro-fabric",
+    "escapedName": "micro-fabric",
+    "rawSpec": "git+ssh://git@github.com/aspectron/micro-fabric.git",
+    "saveSpec": "git+ssh://git@github.com/aspectron/micro-fabric.git",
+    "fetchSpec": "ssh://git@github.com/aspectron/micro-fabric.git",
+    "gitCommittish": null
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "git+ssh://git@github.com/aspectron/micro-fabric.git#b15fec4bbace333f725891e39aaa5f3e32cc3a7e",
+  "_spec": "micro-fabric@git+ssh://git@github.com/aspectron/micro-fabric.git",
+  "_where": "C:\\dev\\lsi\\soar-dsn-player",
+  "bugs": {
+    "url": "https://github.com/aspectron/micro-fabric/issues"
+  },
+  "bundleDependencies": false,
   "dependencies": {
+    "@polymer/app-layout": "^3.0.0-pre.12",
+    "@polymer/iron-icons": "^3.0.0-pre.12",
+    "@polymer/neon-animation": "^3.0.0-pre.12",
+    "@polymer/paper-button": "^3.0.0-pre.12",
+    "@polymer/paper-checkbox": "^3.0.0-pre.12",
+    "@polymer/paper-dialog": "^3.0.0-pre.12",
+    "@polymer/paper-drawer-panel": "^3.0.0-pre.12",
+    "@polymer/paper-icon-button": "^3.0.0-pre.12",
+    "@polymer/paper-input": "^3.0.0-pre.12",
+    "@polymer/paper-item": "^3.0.0-pre.12",
+    "@polymer/paper-listbox": "^3.0.0-pre.12",
+    "@polymer/paper-material": "^3.0.0-pre.12",
+    "@polymer/paper-menu-button": "^3.0.0-pre.12",
+    "@polymer/paper-tabs": "^3.0.0-pre.12",
+    "@polymer/polymer": "^3.0.0-pre.12",
     "colors": "^1.1.2",
+    "fs-extra": "*",
+    "gulp": "*",
     "nats": "^0.7.24",
     "node-nats-streaming": "0.0.26",
     "nuid": "^0.6.14",
-    "request": "^2.83.0",
-    "underscore": "^1.8.3",
-    "@polymer/iron-icons": "^3.0.0-pre.12",
-    "web-animations-js": "^2.3.1",
-    "@polymer/neon-animation": "^3.0.0-pre.12",
-    "@polymer/app-layout": "^3.0.0-pre.12",
-    "@polymer/paper-tabs": "^3.0.0-pre.12",
-    "@polymer/paper-item": "^3.0.0-pre.12",
-    "@polymer/paper-listbox": "^3.0.0-pre.12",
-    "@polymer/paper-menu-button": "^3.0.0-pre.12",
-    "@polymer/paper-dialog": "^3.0.0-pre.12",
-    "@polymer/paper-input": "^3.0.0-pre.12",
-    "@polymer/paper-icon-button": "^3.0.0-pre.12",
-    "@polymer/paper-button": "^3.0.0-pre.12",
-    "@polymer/paper-material": "^3.0.0-pre.12",
-    "@polymer/paper-checkbox": "^3.0.0-pre.12",
-    "@polymer/paper-drawer-panel": "^3.0.0-pre.12",
-    "@polymer/polymer": "^3.0.0-pre.12",
     "polymer-build": "^3.0.0-pre.14",
-    "gulp": "*",
-    "fs-extra": "*",
-    "ws": "*",
-    "socket.io": "*"
+    "request": "^2.83.0",
+    "socket.io": "*",
+    "underscore": "^1.8.3",
+    "web-animations-js": "^2.3.1",
+    "ws": "*"
   },
+  "deprecated": false,
+  "description": "µFabric Application Framework",
   "engines": {
     "node": "*",
     "npm": "*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aspectron/micro-fabric"
   },
   "files": [
     "micro-fabric.js",
@@ -52,9 +73,17 @@
     "LICENSE",
     "README.md"
   ],
+  "homepage": "https://github.com/aspectron/micro-fabric",
+  "license": "Apache 2.0",
+  "main": "micro-fabric",
+  "name": "micro-fabric",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/aspectron/micro-fabric.git"
+  },
   "scripts": {
     "prepublish": "npm prune"
   },
-  "license": "Apache 2.0",
-  "homepage": "https://github.com/aspectron/micro-fabric"
+  "version": "0.0.1"
 }
