--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "url": "git://github.com/aspectron/micro-fabric.git"
   },
   "scripts": {
+    "postinstall": "node install.js",
     "prepublish": "npm prune"
   },
   "version": "0.0.3"
