--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-fabric",
-  "version": "0.0.30",
+  "version": "0.1.0",
   "author": {
     "name": "ASPECTRON Inc.",
     "email": "info@aspectron.com",
@@ -11,14 +11,14 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "colors": "^1.1.2",
+    "colors": "*",
     "fs-extra": "*",
-    "nats": "^0.7.24",
-    "node-nats-streaming": "0.0.26",
-    "nuid": "^0.6.14",
-    "request": "^2.83.0",
+    "nats": "*",
+    "node-nats-streaming": "*",
+    "nuid": "*",
+    "request": "*",
     "socket.io": "*",
-    "underscore": "^1.8.3",
+    "underscore": "*",
     "ws": "*"
   },
   "deprecated": false,
